<resources>
    <string name="app_name">TeamUp</string>
    <string name="create_your_account">Create Your\nAccount</string>
    <string name="full_name">Full name</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome\nBack!</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="email_verification">Email Verification</string>
    <string name="we_ve_sent_a_code">We\'ve sent a code to %1$s to verify your account</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="what_field_are_you_most_interested_in_learning">What field are you most interested in learning ?</string>
    <string name="mobile">Mobile</string>
    <string name="design">Design</string>
    <string name="web">Web</string>
    <string name="cyber_security">Cyber security</string>
    <string name="ai">Ai</string>
    <string name="data_science">Data Science</string>
    <string name="game">Game</string>
    <string name="next">Next</string>
    <string name="how_would_you_describe_your_experience">How would you describe your experience?</string>
    <string name="expert">Expert</string>
    <string name="intermediate">Intermediate</string>
    <string name="beginner">Beginner</string>
    <string name="would_you_like_to_be_a_mentor">Would you like to be a\nmentor?</string>
    <string name="yes_i_m_interested_in_mentoring">Yes, I\'m interested in mentoring</string>
    <string name="no_i_m_primarily_interested_in_joining_projects">No, I\'m primarily interested in joining projects</string>
    <string name="password">Password</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="ishaq_belhadj_mehdi">Ishaq Belhadj Mehdi</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="recover_your_account">Recover Your\nAccount</string>
    <string name="enter_your_email_address_and_we_ll_send_you_a_secure_pin_to_reset_your_password">Enter your email address and we\'ll send you a secure PIN to reset your password.</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="enter_the_6_digit_pin_sent_to_your_email">Enter the 6-digit PIN sent to your email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="set_a_new_password">Set A New\nPassword</string>
    <string name="choose_a_password_that_s_difficult_to_guess">Choose a password that\'s difficult to guess</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_with_google_account">Login with Google account</string>
    <string name="login_with_github_account">Login with Github account</string>
    <string name="login_with_linkedin_account">Login with LinkedIn account</string>
    <string name="sign_up_with_google_account">Sign Up with Google account</string>
    <string name="sign_up_with_linkedin_account">Sign Up with LinkedIn account</string>
    <string name="sign_up_with_github_account">Sign Up with Github account</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="projects">Projects</string>
    <string name="mentors">Mentors</string>
    <string name="people">People</string>
    <string name="image_of_a_mentor">Image of a mentor</string>
    <string name="star_rating">Star rating</string>
    <string name="workspace">Workspace</string>
    <string name="number_of_reviews">(%1$d reviews)</string>
    <string name="members">%1$d members</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_skills">Required skills</string>
    <string name="project_scenario">Project Scenario</string>
    <string name="learning_goals">Learning Goals</string>
    <string name="team_and_roles">Team and roles</string>
    <string name="request_to_join">Request to join</string>
    <string name="my_projects">My projects</string>
    <string name="explore_projects">Explore projects</string>
    <string name="browse_projects_join_teams_and_experience_the_power_of_teamwork">Browse projects , join teams , and experience the power of teamwork.</string>
    <string name="no_project_yet">No Project yet ?</string>
    <string name="my_profile">My profile</string>
    <string name="dark_mode">Dark mode</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="account">Account</string>

</resources>