<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.presentation.ui.fragment.RecoverAccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/md_theme_background"
            app:navigationIconTint="@color/md_theme_onBackground"
            app:navigationIcon="@drawable/ic_arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        android:paddingVertical="@dimen/_28sdp">


        <TextView
            android:id="@+id/tv_recover_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23sdp"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:text="@string/recover_your_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/md_theme_outline"
            app:layout_constraintTop_toBottomOf="@id/tv_recover_account"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_9sdp"
            android:text="@string/enter_your_email_address_and_we_ll_send_you_a_secure_pin_to_reset_your_password"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="@dimen/_28sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_email"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/inputLayout_email"
            android:layout_marginTop="@dimen/_2sdp"
            style="@style/Widget.TeamUp.TextInputLayout.FillBox"
            app:layout_constraintTop_toBottomOf="@id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                style="@style/Widget.TeamUp.TextInputEditText"

                android:hint="@string/example_gmail_com" />
        </com.google.android.material.textfield.TextInputLayout>







        <Button
            android:id="@+id/next"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="@dimen/_22sdp"
            style="@style/Widget.TeamUp.Button.ContainedButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayout_email"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/grayOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3D000000"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="gone"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>