<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.presentation.ui.fragment.EmailConfirmationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_28sdp">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"

            app:drawableLeftCompat="@drawable/ic_back"
            android:text="@string/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_email_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:text="@string/email_verification"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back"

            />
        <TextView
            android:id="@+id/tv_sent_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/md_theme_outline"
            app:layout_constraintTop_toBottomOf="@id/tv_email_verification"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/we_ve_sent_a_code_to_email_address_to_verify_your_account"/>

        <com.otpview.OTPTextView
            android:id="@+id/otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            app:otp_box_background_active="@drawable/otp_background_active"
            app:otp_box_background_inactive="@drawable/otp_background_inactive"
            app:width="@dimen/_38sdp"
            app:height="@dimen/_45sdp"
            app:length="6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sent_code"
            />








        <Button
            android:id="@+id/verify"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:layout_marginTop="@dimen/_22sdp"
            style="@style/Widget.TeamUp.Button.ContainedButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp"/>
        <TextView
            android:id="@+id/resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verify"
            android:text="@string/didn_t_receive_code"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/grayOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3D000000"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="gone"
        />
</FrameLayout>